<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="space.jonhy.app.gossip.activity.AppsActivity">

    <space.jonhy.app.gossip.view.TopBanner
        android:id="@+id/topbanner"
        style="@style/TopBannerBaseStyle"
        custom:leftButtonBackground="@mipmap/ic_reback"
        custom:leftButtonHeight="20dp"
        custom:leftButtonVisiable="true"
        custom:leftButtonWidth="25dp"
        custom:rightButtonBackground="@mipmap/ic_filter"
        custom:titleText="@string/add_app_to_hook"
        custom:titleTextColors="#c1030303" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/text_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/search_default" />

        <Button
            android:id="@+id/button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />

        <ProgressBar
            android:id="@+id/pb_progressbar"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_centerInParent="true"
            android:indeterminateDrawable="@drawable/bg_progressbar" />
            />
    </RelativeLayout>



</LinearLayout>
